apprt/gtk-ng: ResizeOverlay class

--- a/src/apprt/gtk-ng/css/style.css
+++ b/src/apprt/gtk-ng/css/style.css
@@ -23,7 +23,7 @@ label.url-overlay.right {
   border-radius: 6px 0px 0px 0px;
 }
 
-label.size-overlay {
+.size-overlay label {
   padding: 4px 8px 4px 8px;
   border-radius: 6px 6px 6px 6px;
   outline-style: solid;
